--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="container">
             <img src="assets/grocery-basket.png">
             <input type="text" id="input-field" placeholder="Bread">
-            <button id="add-button">Add to cart</button>
+            <button id="add-button">Add to list</button>
             <ul id="shopping-list">
             </ul>
         </div>
