Items appended to UL element

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <div class="container">
             <img src="assets/grocery-basket.png">
-            <input type="text" id="input-field" placeholder="Bread">
+            <input type="text" id="input-field" placeholder="Item...">
             <button id="add-button">Add to list</button>
             <ul id="shopping-list">
             </ul>
