removed database connection
I removed the connection to the database and am storing values in a local array.

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     </head>
     <body>
         <div class="container">
+            <h1 id="title">Grocery List</h1>
             <img src="assets/grocery-basket.png">
             <input type="text" id="input-field" placeholder="What do you need?">
             <button id="add-button">Add to list</button>
