UI instructions to delete
Added conditional instructions for user that displays if items are on list

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <button id="add-button">Add to list</button>
             <ul id="shopping-list">
             </ul>
+            <p id="delete-instructions">(Double-click an item to delete)</p>
         </div>
         <script src="index.js" type="module"></script>
     </body>
